--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,5 @@ jobs:
           M_TOKEN: ${{ secrets.M_TOKEN }}
           MONGO_URL: ${{ secrets.MONGO_URL }}
         run: |
-          python main_file.py
+          # python main_file.py
+          python test.py
